welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:9: error: ':' expected but ')' found.
def estAdo(n) {
            ^teenSum:12: error: identifier expected but '}' found.
 }
 ^